tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/instanceip/instance_IP_with_wildcard_sidecar/_test_context/Sidecar.3384583757.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-60257
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: 0.0.0.0:18082
    port:
      number: 18082
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
